--- a/jupyter_notebooks/create_xrs_database.ipynb
+++ b/jupyter_notebooks/create_xrs_database.ipynb
@@ -2,6 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys  \n",
+    "sys.path.insert(1, '..')\n",
+    "sys.path.insert(2, '../modules/')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import timedelta, date\n",
+    "import pickle\n",
+    "from ruffus import *\n",
+    "import os\n",
+    "import xarray as xr\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import re\n",
+    "import dataconfig"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -9,8 +37,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "aiadl_2",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
