change ftp_prename to new xrs with scaling factor removed data

--- a/jupyter_notebooks/create_xrs_database.ipynb
+++ b/jupyter_notebooks/create_xrs_database.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,8 @@
     "\n",
     "inst_dict = {'goes13': 'g13', 'goes14': 'g14', 'goes15': 'g15'}\n",
     "\n",
-    "ftp_prename = 'ftp://satdat.ngdc.noaa.gov/sem/goes/data/science/xrs'\n",
+    "# ftp_prename = 'ftp://satdat.ngdc.noaa.gov/sem/goes/data/science/xrs'\n",
+    "ftp_prename = 'https://ncei.noaa.gov/data/goes-space-environment-monitor/access/science/xrs'\n",
     "\n",
     "\n",
     "#### set the date limits of the data you want to download\n",
@@ -108,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,14 +118,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wget -e robots=off --recursive --no-parent -A --directory-prefix /mnt/e/image_data/xrs_data_flux --no-directories --verbose False ftp://satdat.ngdc.noaa.gov/sem/goes/data/science/xrs/goes13/gxrs-l2-irrad_science/2010/05/sci_gxrs-l2-irrad_g13_d20100501_v0-0-0.nc -O /mnt/e/image_data/xrs_data_flux/2010-05-01_goes13_irrad.nc\n"
+      "wget -e robots=off --recursive --no-parent -A --directory-prefix /mnt/e/image_data/xrs_data_flux --no-directories --verbose False https://ncei.noaa.gov/data/goes-space-environment-monitor/access/science/xrs/goes13/gxrs-l2-irrad_science/2010/05/sci_gxrs-l2-irrad_g13_d20100501_v0-0-0.nc -O /mnt/e/image_data/xrs_data_flux/2010-05-01_goes13_irrad.nc\n"
      ]
     }
    ],
@@ -145,6 +146,13 @@
     "# os.system(download_str)\n",
     "print(download_str)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
