old link has response. need to make wget log to check if there is a sym link to the new data

--- a/jupyter_notebooks/create_xrs_database.ipynb
+++ b/jupyter_notebooks/create_xrs_database.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,8 +50,8 @@
     "\n",
     "inst_dict = {'goes13': 'g13', 'goes14': 'g14', 'goes15': 'g15'}\n",
     "\n",
-    "# ftp_prename = 'ftp://satdat.ngdc.noaa.gov/sem/goes/data/science/xrs'\n",
-    "ftp_prename = 'https://ncei.noaa.gov/data/goes-space-environment-monitor/access/science/xrs'\n",
+    "ftp_prename = 'ftp://satdat.ngdc.noaa.gov/sem/goes/data/science/xrs'\n",
+    "# ftp_prename = 'https://ncei.noaa.gov/data/goes-space-environment-monitor/access/science/xrs'\n",
     "\n",
     "\n",
     "#### set the date limits of the data you want to download\n",
@@ -111,9 +111,55 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'download_file': 'ftp://satdat.ngdc.noaa.gov/sem/goes/data/science/xrs/goes13/gxrs-l2-irrad_science/2010/05/sci_gxrs-l2-irrad_g13_d20100501_v0-0-0.nc',\n",
+       "  'out_name': '/mnt/e/image_data/xrs_data_flux/2010-05-01_goes13_irrad.nc'},\n",
+       " {'download_file': 'ftp://satdat.ngdc.noaa.gov/sem/goes/data/science/xrs/goes13/gxrs-l2-irrad_science/2010/05/sci_gxrs-l2-irrad_g13_d20100502_v0-0-0.nc',\n",
+       "  'out_name': '/mnt/e/image_data/xrs_data_flux/2010-05-02_goes13_irrad.nc'},\n",
+       " {'download_file': 'ftp://satdat.ngdc.noaa.gov/sem/goes/data/science/xrs/goes14/gxrs-l2-irrad_science/2010/05/sci_gxrs-l2-irrad_g14_d20100501_v0-0-0.nc',\n",
+       "  'out_name': '/mnt/e/image_data/xrs_data_flux/2010-05-01_goes14_irrad.nc'},\n",
+       " {'download_file': 'ftp://satdat.ngdc.noaa.gov/sem/goes/data/science/xrs/goes14/gxrs-l2-irrad_science/2010/05/sci_gxrs-l2-irrad_g14_d20100502_v0-0-0.nc',\n",
+       "  'out_name': '/mnt/e/image_data/xrs_data_flux/2010-05-02_goes14_irrad.nc'},\n",
+       " {'download_file': 'ftp://satdat.ngdc.noaa.gov/sem/goes/data/science/xrs/goes15/gxrs-l2-irrad_science/2010/05/sci_gxrs-l2-irrad_g15_d20100501_v0-0-0.nc',\n",
+       "  'out_name': '/mnt/e/image_data/xrs_data_flux/2010-05-01_goes15_irrad.nc'},\n",
+       " {'download_file': 'ftp://satdat.ngdc.noaa.gov/sem/goes/data/science/xrs/goes15/gxrs-l2-irrad_science/2010/05/sci_gxrs-l2-irrad_g15_d20100502_v0-0-0.nc',\n",
+       "  'out_name': '/mnt/e/image_data/xrs_data_flux/2010-05-02_goes15_irrad.nc'}]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "queries = ftp_name_dict\n",
+    "queries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "queries = ftp_name_dict[0]\n"
+    "# ftp_query_name = queries['download_file']\n",
+    "\n",
+    "#     ############### EDIT ###################\n",
+    "\n",
+    "#         # Include \"outname\" in oufile dict in order to offer continuity to the pipeline\n",
+    "\n",
+    "# # ftp_query_name = 'https://ncei.noaa.gov/data/goes-space-environment-monitor/access/science/xrs/goes14/gxrs-l2-irrad_science/2010/05/sci_gxrs-l2-irrad_g14_d20100501_v0-0-0.nc'\n",
+    "# outfile_name = queries['out_name']\n",
+    "\n",
+    "# # print(outfile)\n",
+    "\n",
+    "# download_str = f'wget -e robots=off --recursive --no-parent -A --directory-prefix {WORKING_DIR} --no-directories --verbose False {ftp_query_name} -O {outfile_name}' \n",
+    "\n",
+    "# # os.system(download_str)\n",
+    "# print(download_str)"
    ]
   },
   {
@@ -125,34 +171,53 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wget -e robots=off --recursive --no-parent -A --directory-prefix /mnt/e/image_data/xrs_data_flux --no-directories --verbose False https://ncei.noaa.gov/data/goes-space-environment-monitor/access/science/xrs/goes13/gxrs-l2-irrad_science/2010/05/sci_gxrs-l2-irrad_g13_d20100501_v0-0-0.nc -O /mnt/e/image_data/xrs_data_flux/2010-05-01_goes13_irrad.nc\n"
+      "ftp://satdat.ngdc.noaa.gov/sem/goes/data/science/xrs/goes13/gxrs-l2-irrad_science/2010/05/sci_gxrs-l2-irrad_g13_d20100501_v0-0-0.nc\n",
+      "2048\n",
+      "ftp://satdat.ngdc.noaa.gov/sem/goes/data/science/xrs/goes13/gxrs-l2-irrad_science/2010/05/sci_gxrs-l2-irrad_g13_d20100502_v0-0-0.nc\n",
+      "2048\n",
+      "ftp://satdat.ngdc.noaa.gov/sem/goes/data/science/xrs/goes14/gxrs-l2-irrad_science/2010/05/sci_gxrs-l2-irrad_g14_d20100501_v0-0-0.nc\n",
+      "0\n",
+      "ftp://satdat.ngdc.noaa.gov/sem/goes/data/science/xrs/goes14/gxrs-l2-irrad_science/2010/05/sci_gxrs-l2-irrad_g14_d20100502_v0-0-0.nc\n",
+      "0\n",
+      "ftp://satdat.ngdc.noaa.gov/sem/goes/data/science/xrs/goes15/gxrs-l2-irrad_science/2010/05/sci_gxrs-l2-irrad_g15_d20100501_v0-0-0.nc\n",
+      "2048\n",
+      "ftp://satdat.ngdc.noaa.gov/sem/goes/data/science/xrs/goes15/gxrs-l2-irrad_science/2010/05/sci_gxrs-l2-irrad_g15_d20100502_v0-0-0.nc\n",
+      "2048\n"
      ]
     }
    ],
    "source": [
-    "ftp_query_name = queries['download_file']\n",
-    "\n",
-    "    ############### EDIT ###################\n",
-    "\n",
-    "        # Include \"outname\" in oufile dict in order to offer continuity to the pipeline\n",
-    "\n",
     "# ftp_query_name = 'https://ncei.noaa.gov/data/goes-space-environment-monitor/access/science/xrs/goes14/gxrs-l2-irrad_science/2010/05/sci_gxrs-l2-irrad_g14_d20100501_v0-0-0.nc'\n",
-    "outfile_name = queries['out_name']\n",
+    "# ftp_query_name = 'https://ncei.noaa.gov/data/goes-space-environment-monitor/access/science/xrs/goes14/gxrs-l2-irrad_science/2010/05/sci_gxrs-l2-irrad_g14_d20100501_v0-0-0.nc'\n",
+    "# ftp_prename = 'ftp://satdat.ngdc.noaa.gov/sem/goes/data/science/xrs'\n",
     "\n",
-    "# print(outfile)\n",
+    "for element in queries:\n",
     "\n",
-    "download_str = f'wget -e robots=off --recursive --no-parent -A --directory-prefix {WORKING_DIR} --no-directories --verbose False {ftp_query_name} -O {outfile_name}' \n",
-    "\n",
-    "# os.system(download_str)\n",
-    "print(download_str)"
+    "    ftp_query_name = element['download_file']\n",
+    "    print(ftp_query_name)\n",
+    "    response = os.system(f'wget -q {ftp_query_name}')\n",
+    "    print(response)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ftp://satdat.ngdc.noaa.gov/sem/goes/data/science/xrs/goes14/gxrs-l2-irrad_science/2010/05/sci_gxrs-l2-irrad_g14_d20100501_v0-0-0.nc'"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ftp_query_name"
+   ]
   },
   {
    "cell_type": "code",
