added wget log in download string. Tested several files. try test xrs DL pipeline next

--- a/jupyter_notebooks/create_xrs_database.ipynb
+++ b/jupyter_notebooks/create_xrs_database.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,35 +101,42 @@
     "\n",
     "        ftp_name = f'{ftp_prename}/{full_instrument_name}/gxrs-l2-irrad_science/{year}/{month}/{specific_file_name}'\n",
     "\n",
-    "\n",
     "        outfile_str = tw(f'{year}-{month}-{day}_{full_instrument_name}_irrad.nc')\n",
     "\n",
-    "        ftp_name_dict.append({'download_file': ftp_name, 'out_name': outfile_str})"
+    "        wget_log_file = f'{outfile_str}.wget_log'\n",
+    "\n",
+    "        ftp_name_dict.append({'download_file': ftp_name, 'out_name': outfile_str, 'wget_log_file': wget_log_file })"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[{'download_file': 'ftp://satdat.ngdc.noaa.gov/sem/goes/data/science/xrs/goes13/gxrs-l2-irrad_science/2010/05/sci_gxrs-l2-irrad_g13_d20100501_v0-0-0.nc',\n",
-       "  'out_name': '/mnt/e/image_data/xrs_data_flux/2010-05-01_goes13_irrad.nc'},\n",
+       "  'out_name': '/mnt/e/image_data/xrs_data_flux/2010-05-01_goes13_irrad.nc',\n",
+       "  'wget_log_file': '/mnt/e/image_data/xrs_data_flux/2010-05-01_goes13_irrad.nc.wget_log'},\n",
        " {'download_file': 'ftp://satdat.ngdc.noaa.gov/sem/goes/data/science/xrs/goes13/gxrs-l2-irrad_science/2010/05/sci_gxrs-l2-irrad_g13_d20100502_v0-0-0.nc',\n",
-       "  'out_name': '/mnt/e/image_data/xrs_data_flux/2010-05-02_goes13_irrad.nc'},\n",
+       "  'out_name': '/mnt/e/image_data/xrs_data_flux/2010-05-02_goes13_irrad.nc',\n",
+       "  'wget_log_file': '/mnt/e/image_data/xrs_data_flux/2010-05-02_goes13_irrad.nc.wget_log'},\n",
        " {'download_file': 'ftp://satdat.ngdc.noaa.gov/sem/goes/data/science/xrs/goes14/gxrs-l2-irrad_science/2010/05/sci_gxrs-l2-irrad_g14_d20100501_v0-0-0.nc',\n",
-       "  'out_name': '/mnt/e/image_data/xrs_data_flux/2010-05-01_goes14_irrad.nc'},\n",
+       "  'out_name': '/mnt/e/image_data/xrs_data_flux/2010-05-01_goes14_irrad.nc',\n",
+       "  'wget_log_file': '/mnt/e/image_data/xrs_data_flux/2010-05-01_goes14_irrad.nc.wget_log'},\n",
        " {'download_file': 'ftp://satdat.ngdc.noaa.gov/sem/goes/data/science/xrs/goes14/gxrs-l2-irrad_science/2010/05/sci_gxrs-l2-irrad_g14_d20100502_v0-0-0.nc',\n",
-       "  'out_name': '/mnt/e/image_data/xrs_data_flux/2010-05-02_goes14_irrad.nc'},\n",
+       "  'out_name': '/mnt/e/image_data/xrs_data_flux/2010-05-02_goes14_irrad.nc',\n",
+       "  'wget_log_file': '/mnt/e/image_data/xrs_data_flux/2010-05-02_goes14_irrad.nc.wget_log'},\n",
        " {'download_file': 'ftp://satdat.ngdc.noaa.gov/sem/goes/data/science/xrs/goes15/gxrs-l2-irrad_science/2010/05/sci_gxrs-l2-irrad_g15_d20100501_v0-0-0.nc',\n",
-       "  'out_name': '/mnt/e/image_data/xrs_data_flux/2010-05-01_goes15_irrad.nc'},\n",
+       "  'out_name': '/mnt/e/image_data/xrs_data_flux/2010-05-01_goes15_irrad.nc',\n",
+       "  'wget_log_file': '/mnt/e/image_data/xrs_data_flux/2010-05-01_goes15_irrad.nc.wget_log'},\n",
        " {'download_file': 'ftp://satdat.ngdc.noaa.gov/sem/goes/data/science/xrs/goes15/gxrs-l2-irrad_science/2010/05/sci_gxrs-l2-irrad_g15_d20100502_v0-0-0.nc',\n",
-       "  'out_name': '/mnt/e/image_data/xrs_data_flux/2010-05-02_goes15_irrad.nc'}]"
+       "  'out_name': '/mnt/e/image_data/xrs_data_flux/2010-05-02_goes15_irrad.nc',\n",
+       "  'wget_log_file': '/mnt/e/image_data/xrs_data_flux/2010-05-02_goes15_irrad.nc.wget_log'}]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,11 +148,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1024"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# ftp_query_name = queries['download_file']\n",
+    "test_query = queries[0]\n",
+    "ftp_query_name = test_query['download_file']\n",
+    "outfile_name = test_query['out_name']\n",
+    "wget_log_file = test_query['wget_log_file']\n",
     "\n",
     "#     ############### EDIT ###################\n",
     "\n",
@@ -156,33 +177,26 @@
     "\n",
     "# # print(outfile)\n",
     "\n",
-    "# download_str = f'wget -e robots=off --recursive --no-parent -A --directory-prefix {WORKING_DIR} --no-directories --verbose False {ftp_query_name} -O {outfile_name}' \n",
+    "download_str = f'wget -e robots=off --recursive --no-parent -A --directory-prefix {WORKING_DIR} --no-directories --verbose False {ftp_query_name} -O {outfile_name} -o {wget_log_file}' \n",
     "\n",
-    "# # os.system(download_str)\n",
+    "os.system(download_str)\n",
     "# print(download_str)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ftp://satdat.ngdc.noaa.gov/sem/goes/data/science/xrs/goes13/gxrs-l2-irrad_science/2010/05/sci_gxrs-l2-irrad_g13_d20100501_v0-0-0.nc\n",
-      "2048\n",
-      "ftp://satdat.ngdc.noaa.gov/sem/goes/data/science/xrs/goes13/gxrs-l2-irrad_science/2010/05/sci_gxrs-l2-irrad_g13_d20100502_v0-0-0.nc\n",
-      "2048\n",
-      "ftp://satdat.ngdc.noaa.gov/sem/goes/data/science/xrs/goes14/gxrs-l2-irrad_science/2010/05/sci_gxrs-l2-irrad_g14_d20100501_v0-0-0.nc\n",
-      "0\n",
-      "ftp://satdat.ngdc.noaa.gov/sem/goes/data/science/xrs/goes14/gxrs-l2-irrad_science/2010/05/sci_gxrs-l2-irrad_g14_d20100502_v0-0-0.nc\n",
-      "0\n",
-      "ftp://satdat.ngdc.noaa.gov/sem/goes/data/science/xrs/goes15/gxrs-l2-irrad_science/2010/05/sci_gxrs-l2-irrad_g15_d20100501_v0-0-0.nc\n",
-      "2048\n",
-      "ftp://satdat.ngdc.noaa.gov/sem/goes/data/science/xrs/goes15/gxrs-l2-irrad_science/2010/05/sci_gxrs-l2-irrad_g15_d20100502_v0-0-0.nc\n",
-      "2048\n"
+     "ename": "KeyError",
+     "evalue": "''",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-21-ed097e342c76>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0melement\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mqueries\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0melement\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m''\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0;31m# ftp_query_name = element['download_file']\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: ''"
      ]
     }
    ],
@@ -191,12 +205,13 @@
     "# ftp_query_name = 'https://ncei.noaa.gov/data/goes-space-environment-monitor/access/science/xrs/goes14/gxrs-l2-irrad_science/2010/05/sci_gxrs-l2-irrad_g14_d20100501_v0-0-0.nc'\n",
     "# ftp_prename = 'ftp://satdat.ngdc.noaa.gov/sem/goes/data/science/xrs'\n",
     "\n",
-    "for element in queries:\n",
+    "# for element in queries:\n",
+    "#     print(element[''])\n",
     "\n",
-    "    ftp_query_name = element['download_file']\n",
-    "    print(ftp_query_name)\n",
-    "    response = os.system(f'wget -q {ftp_query_name}')\n",
-    "    print(response)"
+    "    # ftp_query_name = element['download_file']\n",
+    "    # print(ftp_query_name)\n",
+    "    # response = os.system(f'wget -q {ftp_query_name}')\n",
+    "    # print(response)"
    ]
   },
   {
