parsing metadata for HEK search result

--- a/jupyter_notebooks/create_hek_flare_database.ipynb
+++ b/jupyter_notebooks/create_hek_flare_database.ipynb
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,14 +184,15 @@
     "                'event_peaktime',\n",
     "                'fl_goescls',\n",
     "                'hgs_coord',\n",
-    "                'obs_observatory'\n",
+    "                'obs_observatory',\n",
+    "                'search_observatory'\n",
     "                \n",
     "                ]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -201,16 +202,16 @@
        "GOES      192\n",
        "MAVEN      45\n",
        "IRIS        4\n",
-       "Name: obs_observatory, dtype: int64"
+       "Name: search_observatory, dtype: int64"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "search_result.to_pandas()[keep_columns].obs_observatory.value_counts()"
+    "search_result.to_pandas()[keep_columns].search_observatory.value_counts()"
    ]
   },
   {
