start parsing create_hek_flare_database

--- a/jupyter_notebooks/create_hek_flare_database.ipynb
+++ b/jupyter_notebooks/create_hek_flare_database.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,34 +25,96 @@
     "import numpy as np\n",
     "from ruffus import *\n",
     "import re\n",
+    "import datetime\n",
+    "from datetime import timedelta\n",
     "\n",
     "import dataconfig"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "WORKING_DIR = 'flare_hekQ.working'\n",
     "\n",
+    "tw = lambda x: os.path.join(WORKING_DIR, x)\n",
     "\n",
-    "WORKING_DIR = 'goes_loc_vs_noloc.working'\n",
-    "tw = lambda x: os.path.join(dataconfig.DATA_DIR_HEK_FLARES, x)\n",
+    "# create initial time pairs for running through the hek AR query by month\n",
+    "time_array = []\n",
     "\n",
-    "original_files =  ['goes_2010_cclass', 'goes_2011_cclass', 'goes_2012_cclass', 'goes_2013_cclass', 'goes_2014_cclass', 'goes_2015_cclass', \n",
-    "\t\t\t'goes_2016_cclass', 'goes_2017_cclass', 'goes_2018_cclass', 'goes_2019_cclass', 'goes_2020_cclass',\n",
-    "\t\t\t'goes_2010_mclass', 'goes_2011_mclass', 'goes_2012_mclass', 'goes_2013_mclass', 'goes_2014_mclass', 'goes_2015_mclass', \n",
-    "\t\t\t'goes_2016_mclass', 'goes_2017_mclass', 'goes_2018_mclass', 'goes_2019_mclass', 'goes_2020_mclass',\n",
-    "\t\t\t'goes_2010_xclass', 'goes_2011_xclass', 'goes_2012_xclass', 'goes_2013_xclass', 'goes_2014_xclass', 'goes_2015_xclass', \n",
-    "\t\t\t'goes_2016_xclass', 'goes_2017_xclass', 'goes_2018_xclass', 'goes_2019_xclass', 'goes_2020_xclass']\n",
-    "\t\t\t\t\n",
+    "x = pd.date_range(start='4/01/2010', end='11/30/2020', freq = 'M')\n",
     "\n",
+    "# x starts with the end date of april such that for every starting point we need to add an extra day such that we begin in the same month as the end month. \n",
+    "for previous, current in zip(x, x[1:]):\n",
+    "    j = ([previous + timedelta(days = 1), current ])\n",
+    "    my_dict = {'name': '{}_{}_flare_hek'.format(previous.year, previous.month),\n",
+    "    \t\t\t'start': j[0], \n",
+    "    \t\t\t'end':j[1]}\n",
+    "    time_array.append(my_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': '2010_4_flare_hek',\n",
+       " 'start': Timestamp('2010-05-01 00:00:00', freq='M'),\n",
+       " 'end': Timestamp('2010-05-31 00:00:00', freq='M')}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "time_array[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def create_initial_files():\n",
-    "\tfor file in original_files[:1]:\n",
+    "\tfor file in time_array[:1]:\n",
     "\t\tinfile = None\n",
-    "\t\toutfile = tw(f'{file}.start.pickle')\n",
-    "\t\treturn(infile,outfile)"
+    "\t\tname = file['name']\n",
+    "\t\tstart = file['start']\n",
+    "\t\tend = file['end']\n",
+    "\t\toutfile = tw('{}.start.pickle'.format(name))\n",
+    "\t\treturn(infile,outfile,start,end)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(None,\n",
+       " 'flare_hekQ.working/2010_4_flare_hek.start.pickle',\n",
+       " Timestamp('2010-05-01 00:00:00', freq='M'),\n",
+       " Timestamp('2010-05-31 00:00:00', freq='M'))"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "first_call = create_initial_files()\n",
+    "first_call"
    ]
   },
   {
@@ -61,45 +123,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\t\t\n",
-    "# @mkdir(WORKING_DIR)\n",
-    "# @files(create_initial_files)\n",
-    "def create_request(infile, outfile):\n",
-    "\n",
-    "\tfile_name = re.findall(r'goes_\\d{4}_[cmx]class.start.pickle', outfile)[0]\n",
-    "\tyear = re.findall(r'\\d{4}', outfile)[0]\n",
-    "\tclass_flare = re.findall(r'[cmx]class', outfile)[0][:1]\n",
-    "\n",
-    "\t\n",
-    "\n",
-    "\tt_start = \"{}-01-01\".format(year)\n",
-    "\n",
-    "\tt_end = \"{}-12-31\".format(year)\n",
-    "\n",
-    "\t\n",
-    "\n",
-    "\tif class_flare == 'c':\n",
-    "\t\tclass_filter_start = 'C1'\n",
-    "\t\tclass_filter_end = 'C9.9'\n",
-    "\n",
-    "\tif class_flare == 'm':\n",
-    "\t\tclass_filter_start = 'M1'\n",
-    "\t\tclass_filter_end = 'M9.9'\n",
+    "def create_request(infile, outfile, start, end):\n",
     "\n",
     "\n",
-    "\tif class_flare == 'x':\n",
-    "\t\tclass_filter_start = 'X1'\n",
-    "\t\tclass_filter_end = 'X9.9'\n",
-    "\n",
-    "\ttime_range = TimeRange(t_start, t_end)\n",
-    "\t\n",
-    "\n",
-    "\n",
-    "\treturn({'time_range': time_range, 'class_filter_start': class_filter_start , 'class_filter_end': class_filter_end})\n",
-    "\t\n",
-    "\n",
-    "\n"
+    "\t# pickle.dump({'start': start, 'end': end, 'event_type': 'FL'}, open(outfile, 'wb'))\n",
+    "\t"
    ]
   },
   {
@@ -107,7 +135,32 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# @transform(create_request, suffix('.start.pickle'), \"_flares_hek_result.pickle\")\n",
+    "def download_data(infile, outfile):\n",
+    "\t\n",
+    "\tstart_file = pickle.load(open(infile, 'rb'))\n",
+    "\n",
+    "\tclient = hek.HEKClient()\n",
+    "\n",
+    "\tevent_type = start_file['event_type']\n",
+    "\n",
+    "\ttstart = start_file['start']\n",
+    "\n",
+    "\ttend = start_file['end']\n",
+    "\n",
+    "\t# print('started {}'.format(tstart))\n",
+    "\n",
+    "\t# time_range = TimeRange(t_start, t_end)\n",
+    "\n",
+    "\t# tstart = time_range.start\n",
+    "\t# tend = time_range.end\n",
+    "\n",
+    "\tAR_results = client.search(hek.attrs.Time(tstart, tend),\n",
+    "\t                           hek.attrs.EventType(event_type))\n",
+    "\n",
+    "\tpickle.dump(AR_results, open(outfile, 'wb'))"
+   ]
   },
   {
    "cell_type": "code",
@@ -135,7 +188,93 @@
     }
    ],
    "source": [
-    "create_request(create_initial_files()[0],create_initial_files()[1])"
+    "def parse_HEK_FL_result(infile, outfile):\n",
+    "\n",
+    "\t    # want to condense the results of the query into a more manageable\n",
+    "\t    # dictionary\n",
+    "\t    # keep event data, start time, peak time, end time, GOES-class,\n",
+    "\t    # location, active region source (as per GOES list standard)\n",
+    "\t    # make this into a list of dictionaries\n",
+    "\n",
+    "\tgoes_results = pickle.load(open(infile,'rb'))\n",
+    "\n",
+    "\tgoes_event_list = []\n",
+    "\n",
+    "\tfor r in goes_results:\n",
+    "\t\ttry:\n",
+    "\t\t\thgc_poly_string = r['hgc_bbox']\n",
+    "\t\t\tsep_coord_from_string_hgc = re.split('[(-)]+', hgc_poly_string)\n",
+    "\t\t\tsep_coord_from_string_hgc = re.split('[(-)]+', hgc_poly_string)\n",
+    "\t\t\tonly_coord_string_list_hgc = sep_coord_from_string_hgc[1].split(',')\n",
+    "\t\t\tthis_coord_array_hgc = []\n",
+    "\t\t\tfor coord_pair_string_hgc in only_coord_string_list_hgc:\n",
+    "\t\t\t\tnumerical_coord_pairs_hgc = [np.float(coord_pair_string_hgc.split(' ')[0]), np.float(coord_pair_string_hgc.split(' ')[1])]\n",
+    "\t\t\t\tthis_coord_array_hgc.append(numerical_coord_pairs_hgc)\n",
+    "\t\texcept:\n",
+    "\t\t\tthis_coord_array_hgc = [0]\n",
+    "\n",
+    "\t\ttry:\n",
+    "\t\t\thpc_poly_string = r['hpc_bbox']\n",
+    "\t\t\tsep_coord_from_string_hpc = re.split('[(-)]+', hpc_poly_string)\n",
+    "\t\t\tsep_coord_from_string_hpc = re.split('[(-)]+', hpc_poly_string)\n",
+    "\t\t\tonly_coord_string_list_hpc = sep_coord_from_string_hpc[1].split(',')\n",
+    "\t\t\tthis_coord_array_hpc = []\n",
+    "\t\t\tfor coord_pair_string_hpc in only_coord_string_list_hpc:\n",
+    "\t\t\t\tnumerical_coord_pairs_hpc = [np.float(coord_pair_string_hpc.split(' ')[0]), np.float(coord_pair_string_hpc.split(' ')[1])]\n",
+    "\t\t\t\tthis_coord_array_hpc.append(numerical_coord_pairs_hpc)\n",
+    "\t\texcept:\n",
+    "\t\t\tthis_coord_array_hpc = [0]\n",
+    "\n",
+    "\n",
+    "\t\ttry:\n",
+    "\t\t\thgs_poly_string = r['hgs_bbox']\n",
+    "\t\t\tsep_coord_from_string_hgs = re.split('[(-)]+', hgs_poly_string)\n",
+    "\t\t\tsep_coord_from_string_hgs = re.split('[(-)]+', hgs_poly_string)\n",
+    "\t\t\tonly_coord_string_list_hgs = sep_coord_from_string_hgs[1].split(',')\n",
+    "\t\t\tthis_coord_array_hgs = []\n",
+    "\t\t\tfor coord_pair_string_hgs in only_coord_string_list_hgs:\n",
+    "\t\t\t\tnumerical_coord_pairs_hgs = [np.float(coord_pair_string_hgs.split(' ')[0]), np.float(coord_pair_string_hgs.split(' ')[1])]\n",
+    "\t\t\t\tthis_coord_array_hgs.append(numerical_coord_pairs_hgs)\n",
+    "\t\texcept:\n",
+    "\t\t\tthis_coord_array_hgs = [0]\n",
+    "\t\t\t\n",
+    "\t\tif r['noposition'] == 'true':\n",
+    "\t\t\tflare_loc_bool = 1\n",
+    "\t\telse:\n",
+    "\t\t\tflare_loc_bool = 0\n",
+    "\n",
+    "\t\tgoes_event = {\n",
+    "\t\t\t'event_date': parse_time(r['event_starttime']).strftime(\n",
+    "\t\t\t    '%Y-%m-%d'),\n",
+    "\t\t\t'start_time': parse_time(r['event_starttime']),\n",
+    "\t\t\t'peak_time': parse_time(r['event_peaktime']),\n",
+    "\t\t\t'end_time': parse_time(r['event_endtime']),\n",
+    "\t\t\t'goes_class': str(r['fl_goescls']),\n",
+    "\t\t\t'AR_num': r['ar_noaanum'],\n",
+    "\t\t\t'hgs_x': r['hgs_x'],\n",
+    "\t\t\t'hgs_y': r['hgs_y'],\n",
+    "\t\t\t'hgs_bbox_poly': this_coord_array_hgs,\n",
+    "\t\t\t'hgc_x': r['hgc_x'],\n",
+    "\t\t\t'hgc_y': r['hgc_y'],\n",
+    "\t\t\t'hgc_bbox_poly': this_coord_array_hgc,\n",
+    "\t\t\t'hpc_x': r['hpc_x'],\n",
+    "\t\t\t'hpc_y': r['hpc_y'],\n",
+    "\t\t\t'hpc_bbox_poly': this_coord_array_hpc,\n",
+    "\t\t\t'event_type': r['event_type'],\n",
+    "\t\t\t'telescope_used': r['obs_observatory'],\n",
+    "\t\t\t'id_institute': r['frm_institute'],\n",
+    "\t\t\t'id_team': r['frm_identifier'],\n",
+    "\t\t\t'search_instrument': r['search_instrument'],\n",
+    "\t\t\t'search_channel': r['search_channelid'],\n",
+    "\t\t\t'noposition': flare_loc_bool \n",
+    "\t\t\t}\n",
+    "\t\tgoes_event_list.append(goes_event)\n",
+    "\n",
+    "\tdf = pd.DataFrame(goes_event_list)\n",
+    "\n",
+    "\tpickle.dump(df, open(outfile, 'wb'))\n",
+    "\n",
+    "\t# print('Ended {}'.format(tstart))\n"
    ]
   },
   {
@@ -144,7 +283,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = hek.HEKClient()"
+    "\n",
+    "@merge(parse_HEK_FL_result, 'hek_flare_db.pickle',output_dir=f'{dataconfig.DATA_DIR_PRODUCTS}')\n",
+    "def merge_hek_query_per_month(infiles, outfile):\n",
+    "\tmerged_df_list = []\n",
+    "\n",
+    "\tfor infile in infiles:\n",
+    "\t\tinput_data = pickle.load(open(infile, 'rb'))\n",
+    "\t\tmerged_df_list.append(input_data)\n",
+    "        \n",
+    "\tmerged_df = pd.concat(merged_df_list)\n",
+    "\n",
+    "\tmerged_df = merged_df.sort_values('start_time')\n",
+    "\n",
+    "\tmerged_df = merged_df.reset_index(drop = True)\n",
+    "\n",
+    "\tpickle.dump(merged_df, open(outfile, 'wb'))\n",
+    "\n",
+    "pipeline_run([merge_hek_query_per_month], multiprocess = 10, verbose = 4)"
    ]
   },
   {
